--- a/task-management-backend/src/main/resources/application.properties
+++ b/task-management-backend/src/main/resources/application.properties
@@ -2,20 +2,18 @@
 server.port=8080
 
 # Cấu hình kết nối Cơ sở dữ liệu MySQL
-
-spring.datasource.url=jdbc:mysql://db:3306/taskdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&authPlugin=mysql_native_password
-spring.datasource.username=devuser
-spring.datasource.password=devpassword
+# Lấy thông tin từ biến môi trường do Docker Compose cung cấp
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Cấu hình JPA và Hibernate
-
 spring.jpa.hibernate.ddl-auto=update
-
-# Hiển thị các câu lệnh SQL trong log
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Điều chỉnh mức độ log cho Hibernate
+# Điều chỉnh mức độ log cho Hibernate để thấy chi tiết SQL và tham số
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
