--- a/task-management-backend/src/main/resources/application.properties
+++ b/task-management-backend/src/main/resources/application.properties
@@ -2,18 +2,35 @@
 server.port=8080
 
 # Cấu hình kết nối Cơ sở dữ liệu MySQL
-# Lấy thông tin từ biến môi trường do Docker Compose cung cấp
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# Lấy thông tin từ biến môi trường do Docker Compose cung cấp,
+# hoặc sử dụng giá trị mặc định nếu biến môi trường không được set.
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/task_management_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:devuser} 
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Cấu hình JPA và Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Điều chỉnh mức độ log cho Hibernate để thấy chi tiết SQL và tham số
+# Điều chỉnh mức độ log
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+logging.level.com.laptrinhjava=DEBUG 
+logging.level.org.springframework.security=INFO 
+
+# Spring Security OAuth2 Client Configuration (Google)
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+
+# Frontend URL
+app.frontend.url=${FRONTEND_URL:http://localhost:3000}
+
+# Default User properties
+default.user.role=ROLE_USER
+default.user.email=phamthinh.dev@example.com 
+default.user.name=Phạm Thịnh (Default System User)
+default.user.avatarUrl=https://i.pravatar.cc/150?u=default.system
